Don't set PanelView visibilty when opening/closing config

Summary:
    Instead of making PanelViewConfig manipulate the visibiltyMode of
    PanelView, make PanelView force the view to be visible whilst the
config
    is open.

    This is cleaner as it doesn't alter the original config, and
resolves a
    bug that opening configure with an autohide panel would shift
contents
    about.

Test Plan:
With panel as autohide opened config
Moused away from panel, panel stayed visible

With panel as autohide, plugged in a USB pen - panel appeared - and
closed when I hid the dialog

Changed mode in panel config, panel didn't immediately change - but did
on close.
Tested with all modes.

Reviewers: #plasma, mart

Reviewed By: mart

Subscribers: mart, plasma-devel

Tags: #plasma
BUG: 372248

Differential Revision: https://phabricator.kde.org/D3408